--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @import "tailwindcss";
 @plugin "daisyui";
- 
+
+* {
+    font-family: "Poppins", sans-serif;
+}
+
+.active {
+    text-decoration: underline;
+    text-decoration-color: gray;
+}
